objects/ID_Cards_Prints__c.object
<CustomObject>
    <description>GS Junction to ID Cards from Group Services</description>
    <fields>
        <fullName>Actual_ID_Counts__c</fullName>
        <formula>CASE(Text(Print_Number__c), 
&quot;1&quot;,ID_Cards_Master__r.P1_Actual_ID_Counts__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Actual_ID_Counts__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Actual_ID_Counts__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Actual_ID_Counts__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Actual_ID_Counts__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual ID Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Changes_Moved_to_Production__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Changes_Moved_To_Production__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Changes_Moved_To_Production__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Changes_Moved_To_Production__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Changes_Moved_To_Production__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Changes_Moved_To_Production__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Changes Moved to Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Ordered__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_ID_Card_Ordered__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_ID_Card_Ordered__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_ID_Card_Ordered__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_ID_Card_Ordered__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_ID_Card_Ordered__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date ID Card Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PSI_Hold_Removed__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_PSI_Hold_Removed__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_PSI_Hold_Removed__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_PSI_Hold_Removed__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_PSI_Hold_Removed__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_PSI_Hold_Removed__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date PSI Hold Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Suppressed__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Suppressed__c, 
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Suppressed__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Suppressed__c, 
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Suppressed__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Suppressed__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Suppressed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Suppression_Removed__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Suppression_Removed__c, 
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Suppression_Removed__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Suppression_Removed__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Suppression_Removed__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Suppression_Removed__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Suppression Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Vendor_Hold_Loaded__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Vendor_Hold_Loaded__c, 
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Vendor_Hold_Loaded__c, 
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Vendor_Hold_Loaded__c,  
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Vendor_Hold_Loaded__c, 
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Vendor_Hold_Loaded__c, 
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Vendor Hold Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Mailing__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Of_First_Mailing__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Of_First_Mailing__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Of_First_Mailing__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Of_First_Mailing__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Of_First_Mailing__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of First Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_ID_BA_Prod_Audit__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Of_ID_BA_Prod_Audit__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Of_ID_BA_Prod_Audit__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Of_ID_BA_Prod_Audit__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Of_ID_BA_Prod_Audit__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Of_ID_BA_Prod_Audit__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of ID BA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Imp_Sales_RA_Prod_Audit__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Of_Imp_Sales_RA_Prod_Audit__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Of_Imp_Sales_RA_Prod_Audit__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Of_Imp_Sales_RA_Prod_Audit__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Of_Imp_Sales_RA_Prod_Audit__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Of_Imp_Sales_RA_Prod_Audit__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Imp/Sales/RA Prod Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Mailing__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Of_Last_Mailing__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Of_Last_Mailing__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Of_Last_Mailing__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Of_Last_Mailing__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Of_Last_Mailing__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Last Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSA_Analyst__c</fullName>
        <formula>Group_Services_Master__r.Owner:User.FirstName&amp;&quot; &quot;&amp;Group_Services_Master__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSA Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Repeatable_Analyst__c</fullName>
        <formula>Group_Services_Repeatable__r.Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSA Repeatable Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Date_First_Prod_File_was_Loaded__c</fullName>
        <formula>Group_Services_Master__r.Date_1st_Production_File_Was_Loaded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS Date First Prod File was Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_Date_First_Prod_File_was_Received__c</fullName>
        <formula>Group_Services_Master__r.Date_1st_Production_File_Was_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS Date First Prod File was Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GS_ID_Card_Issue_Level__c</fullName>
        <formula>Text(Group_Services_Master__r.ID_Card_Issue_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS ID Card Issue Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Repeatable_ID_Card_Issue_Level__c</fullName>
        <formula>GS_ID_Card_Issue_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS Repeatable ID Card Issue Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Repeatable_Task_Description__c</fullName>
        <formula>Group_Services_Repeatable__r.Task_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS Repeatable Task Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Task_Description__c</fullName>
        <formula>Group_Services_Master__r.Task_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS Task Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Services_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Services Master</label>
        <referenceTo>Group_Services__c</referenceTo>
        <relationshipLabel>ID Cards Prints</relationshipLabel>
        <relationshipName>ID_Cards_Prints_GSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Services_Repeatable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Services Repeatable</label>
        <referenceTo>Group_Services_Repeatable__c</referenceTo>
        <relationshipLabel>ID Cards Prints</relationshipLabel>
        <relationshipName>ID_Cards_Prints_GSR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Card_Owner__c</fullName>
        <formula>ID_Cards_Master__r.Owner_Fullname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Card Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Cards_Master__c</fullName>
        <label>ID Cards Master</label>
        <referenceTo>ID_Cards__c</referenceTo>
        <relationshipLabel>ID Cards Prints</relationshipLabel>
        <relationshipName>ID_Cards_Prints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Production_ID_Cards_Applicable__c</fullName>
        <description>Variable mapping formula field</description>
        <formula>CASE(Prints_conversion__c,
&quot;1&quot;,Text(ID_Cards_Master__r.Is_Production_ID_Cards_P1_Applicable__c),
&quot;2&quot;,Text(ID_Cards_Master__r.Is_Production_ID_Cards_P2_Applicable__c),
&quot;3&quot;,Text(ID_Cards_Master__r.Is_Production_ID_Cards_P3_Applicable__c),
&quot;4&quot;,Text(ID_Cards_Master__r.Is_Production_ID_Cards_P4_Applicable__c),
&quot;5&quot;,Text(ID_Cards_Master__r.Is_Production_ID_Cards_P5_Applicable__c),
&quot;No Print Number Selected&quot;)</formula>
        <label>Is Production ID Cards Applicable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P1_P5_Date_ID_Card_Ordered__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_ID_Card_Ordered__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_ID_Card_Ordered__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_ID_Card_Ordered__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_ID_Card_Ordered__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_ID_Card_Ordered__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P1-P5 Date ID Card Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_P5_Date_of_First_Mailing__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Of_First_Mailing__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Of_First_Mailing__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Of_First_Mailing__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Of_First_Mailing__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Of_First_Mailing__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P1-P5 Date of First Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P1_P5_Date_of_Last_Mailing__c</fullName>
        <formula>CASE(Prints_conversion__c, 
&quot;1&quot;,ID_Cards_Master__r.P1_Date_Of_Last_Mailing__c,
&quot;2&quot;,ID_Cards_Master__r.P2_Date_Of_Last_Mailing__c,
&quot;3&quot;,ID_Cards_Master__r.P3_Date_Of_Last_Mailing__c,
&quot;4&quot;,ID_Cards_Master__r.P4_Date_Of_Last_Mailing__c,
&quot;5&quot;,ID_Cards_Master__r.P5_Date_Of_Last_Mailing__c,
DATE(1900,1,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P1-P5 Date of Last Mailing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Print_Number__c</fullName>
        <label>Print Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Print 1</fullName>
                </value>
                <value>
                    <fullName>Print 2</fullName>
                </value>
                <value>
                    <fullName>Print 3</fullName>
                </value>
                <value>
                    <fullName>Print 4</fullName>
                </value>
                <value>
                    <fullName>Print 5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prints_conversion__c</fullName>
        <formula>CASE(Text(Print_Number__c),
&quot;Print 1&quot;,&quot;1&quot;,
&quot;Print 2&quot;,&quot;2&quot;,
&quot;Print 3&quot;,&quot;3&quot;,
&quot;Print 4&quot;,&quot;4&quot;,
&quot;Print 5&quot;,&quot;5&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prints conversion</label>
        <type>Text</type>
    </fields>
    <label>ID Cards Prints</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ID_Cards_Master__c</columns>
        <columns>NAME</columns>
        <columns>Date_Changes_Moved_to_Production__c</columns>
        <columns>Actual_ID_Counts__c</columns>
        <columns>Date_ID_Card_Ordered__c</columns>
        <columns>Date_of_Last_Mailing__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IDCP-{0000}</displayFormat>
        <label>ID Cards Prints Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Cards Prints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>